--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -11,6 +11,13 @@ jobs:
         branches:
           ignore:
             - master
+  - setup-infra-workspace:
+      filters:
+        branches:
+          ignore:
+            - master
+      requires:
+        - setup-workspace
   # - deploy-preview:
   #     # requires:
   #     #   - setup-workspace
@@ -45,27 +52,34 @@ jobs:
             - master
       requires:
         - setup-workspace
-  - e2e:
+  # - e2e:
+  #     filters:
+  #       branches:
+  #         ignore:
+  #           - master
+  #     requires:
+  #       - setup-workspace
+  - docker-platform:
       filters:
         branches:
           ignore:
             - master
       requires:
-        - setup-workspace
-  # - docker-platform:
-  #     filters:
-  #       branches:
-  #         ignore:
-  #           - master
-  #     requires:
-  #       - setup-workspace
-  # - docker-platform-api:
-  #     filters:
-  #       branches:
-  #         ignore:
-  #           - master
-  #     requires:
-  #       - setup-workspace
+        - setup-infra-workspace
+  - docker-platform-api:
+      filters:
+        branches:
+          ignore:
+            - master
+      requires:
+        - setup-infra-workspace
+  - docker-landing:
+      filters:
+        branches:
+          ignore:
+            - master
+      requires:
+        - setup-infra-workspace
   - notify-success:
       filters:
         branches:
@@ -76,4 +90,11 @@ jobs:
         - codegen
         - unit
         - integration
-        - e2e
+        # - e2e
+  - plan:
+      filters:
+        branches:
+          ignore:
+            - master
+      requires:
+        - setup-infra-workspace
