--- a/.circleci/config/commands/install-terraform.yml
+++ b/.circleci/config/commands/install-terraform.yml
@@ -15,16 +15,21 @@ steps:
 
         sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
 
+        apt list upgrade
+
         wget -O- https://apt.releases.hashicorp.com/gpg | \
         gpg --dearmor | \
         sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg > /dev/null
+
+        echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | \
+        sudo tee /etc/apt/sources.list.d/hashicorp.list
 
         gpg --no-default-keyring \
         --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \
         --fingerprint
 
         sudo apt update
-        sudo apt install terraform=1.6.3
+        sudo apt install terraform=1.7.0-*
 
   # - save_cache:
   #     name: 'Save Terraform Cache'
