--- a/.circleci/config/commands/restore-infra-workspace.yml
+++ b/.circleci/config/commands/restore-infra-workspace.yml
@@ -1,20 +1,8 @@
+# Wrapper around `restore-workspace` + terraform specific settings
 description: 'Restore Infra Workspace'
 steps:
-  - checkout
-  - attach_workspace:
-      at: ~/project
-  - restore_cache:
-      name: 'Restore Cache'
-      keys:
-        - pnpm-cache-{{ checksum "pnpm-lock.yaml" }}
-  - restore_cache:
-      name: 'Restore NVM Cache'
-      keys:
-        - nvm-cache-{{ checksum ".nvmrc" }}
-  - restore_cache:
-      name: 'Restore NX Cache'
-      keys:
-        # This is needed for e2e to run, but we add it here for simplicity
-        - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
+  - restore-workspace
+  # - checkout
+  # - attach_workspace:
+  #     at: ~/
   - install-terraform
-  - setup-env
