--- a/.circleci/config/jobs/docker-platform-api.yml
+++ b/.circleci/config/jobs/docker-platform-api.yml
@@ -7,12 +7,7 @@ steps:
       docker_layer_caching: true
   - run:
       name: 'Build platform api Docker image'
-      command: docker-compose --verbose -f .docker/docker-compose.build.yaml build platform-api
-  - run:
-      name: 'Login to Docker Registry'
-      # As a side note, it's usually considered better practice to enter the token interactively, this way the token won't ever show up in your shell history or be visible on your screen
-      command: |
-        echo "$DIGITALOCEAN_ACCESS_TOKEN" | docker login --username codelabapp --password-stdin registry.digitalocean.com
+      command: docker compose --verbose -f .docker/build.docker-compose.yaml build platform-api
   - run:
       name: 'Push Docker Image'
-      command: docker-compose --verbose -f .docker/docker-compose.build.yaml push platform-api
+      command: docker compose --verbose -f .docker/build.docker-compose.yaml push platform-api
