ci: test out do deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -482,7 +482,7 @@ workflows:
                 - master
           requires:
             - setup-workspace
-      - e2e:
+      - docker-platform:
           filters:
             branches:
               ignore:
