--- a/terraform/modules/digitalocean/platform-api-droplet.yaml
+++ b/terraform/modules/digitalocean/platform-api-droplet.yaml
@@ -27,14 +27,18 @@ write_files:
           restart: unless-stopped
           ports:
             - "4000:4000"
+          environment:
+            - AUTH0_M2M_CLIENT_ID=${auth0_m2m_client_id}
+            - AUTH0_M2M_CLIENT_SECRET=${auth0_m2m_client_secret}
+            - NEO4J_URI=${neo4j_uri}
+            - NEO4J_USER=${neo4j_user}
+            - NEO4J_PASSWORD=${neo4j_password}
     # triggered by config_scripts_user
   - path: /var/lib/cloud/scripts/per-once/start-docker-image.sh
     permissions: '0755'
     content: |
       #!/bin/bash
       set -x
-
-      echo "Executing custom scripts..." >> /var/log/codelab.log
 
       snap install doctl
 
