--- a/terraform/modules/digitalocean/platform-droplet.yaml
+++ b/terraform/modules/digitalocean/platform-droplet.yaml
@@ -19,6 +19,7 @@ write_files:
   - path: /root/docker/docker-compose.yml
     # owner: docker:docker
     permissions: '0644'
+    #
     content: |
       version: '3.8'
       services:
@@ -27,14 +28,21 @@ write_files:
           restart: unless-stopped
           ports:
             - "80:3000"
+          environment:
+            - NEXT_PUBLIC_PLATFORM_HOST=${next_public_platform_host}
+            - NEXT_PUBLIC_PLATFORM_API_PORT=${next_public_platform_api_port}
+            - NEXT_PUBLIC_PLATFORM_API_HOSTNAME=${next_public_platform_api_hostname}
+            - AUTH0_SECRET=${auth0_secret}
+            - AUTH0_ISSUER_BASE_URL=${auth0_issuer_base_url}
+            - AUTH0_CLIENT_ID=${auth0_client_id}
+            - AUTH0_CLIENT_SECRET=${auth0_client_secret}
+            - AUTH0_BASE_URL=${auth0_base_url}
     # triggered by config_scripts_user
   - path: /var/lib/cloud/scripts/per-once/start-docker-image.sh
     permissions: '0755'
     content: |
       #!/bin/bash
       set -x
-
-      echo "Executing custom scripts..." >> /var/log/codelab.log
 
       snap install doctl
 
