ci: adding context for prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -483,6 +483,8 @@ workflows:
           requires:
             - setup-workspace
       - docker-platform:
+          context:
+            - prod
           filters:
             branches:
               ignore:
