--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -60,6 +60,8 @@ jobs:
   #     requires:
   #       - setup-workspace
   - docker-platform:
+      context:
+        - prod
       filters:
         branches:
           ignore:
