--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -60,6 +60,8 @@ jobs:
   #     requires:
   #       - setup-workspace
   - docker-platform:
+      context:
+        - prod
       filters:
         branches:
           ignore:
@@ -67,6 +69,8 @@ jobs:
       requires:
         - setup-infra-workspace
   - docker-platform-api:
+      context:
+        - prod
       filters:
         branches:
           ignore:
@@ -74,6 +78,8 @@ jobs:
       requires:
         - setup-infra-workspace
   - docker-landing:
+      context:
+        - prod
       filters:
         branches:
           ignore:
