--- a/.docker/prod/build.docker-compose.yaml
+++ b/.docker/prod/build.docker-compose.yaml
@@ -16,11 +16,9 @@ services:
         NEXT_PUBLIC_API_PORT: ${NEXT_PUBLIC_API_PORT}
         NEXT_PUBLIC_API_HOSTNAME: ${NEXT_PUBLIC_API_HOSTNAME}
         AUTH0_SECRET: ${AUTH0_SECRET}
-        AUTH0_ISSUER_BASE_URL: ${AUTH0_ISSUER_BASE_URL}
+        AUTH0_DOMAIN: ${AUTH0_DOMAIN}
         AUTH0_CLIENT_ID: ${AUTH0_CLIENT_ID}
         AUTH0_CLIENT_SECRET: ${AUTH0_CLIENT_SECRET}
-        AUTH0_AUDIENCE: ${AUTH0_AUDIENCE}
-        AUTH0_BASE_URL: ${AUTH0_BASE_URL}
     image: registry.digitalocean.com/codelabapp/platform
     # image: codelabai/codelab:${DOCKER_TAG_VERSION}
     # This is used after image has been built
