--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ NEXT_PUBLIC_API_PORT=4000
 # A long secret value used to encrypt the session cookie
 AUTH0_SECRET=
 # The url of your Auth0 tenant hooks
-AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
+AUTH0_DOMAIN=codelab-app-dev.us.auth0.com
 # Your Auth0 application's Client ID
 AUTH0_CLIENT_ID=UAkVJDeVRFYo1nmOv4JkSChj7AWscDYw
 # Your Auth0 application's Client Secret
 AUTH0_CLIENT_SECRET=
-# Required for `initAuth0`
-AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
-# Configure for @nextjs-auth0
-AUTH0_BASE_URL=http://127.0.0.1:3000
+
+# These are derived
+# AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
+# AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
