--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -482,6 +482,13 @@ workflows:
                 - master
           requires:
             - setup-workspace
+      - e2e:
+          filters:
+            branches:
+              ignore:
+                - master
+          requires:
+            - setup-workspace
       - docker-platform:
           context:
             - prod
