refactor: rename to web and api

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -489,7 +489,7 @@ workflows:
                 - master
           requires:
             - setup-workspace
-      - docker-platform:
+      - docker-web:
           context:
             - prod
           filters:
