chore: fixing issues from merge
chore: fixing issues from merge

chore: fixing issues from merge

--- a/apps/e2e/project.json
+++ b/apps/e2e/project.json
@@ -34,7 +34,7 @@
       "configurations": {
         "test": {
           "devServerTarget": "e2e:serve:test",
-          "record": true,
+          "record": false,
           "watch": false,
           "exit": true
         },
